# ADFlib

./: CMakeLists.txt  ChangeLog  configure.ac
doc/: Makefile.am  adfls.1
examples/: CMakeLists.txt  Makefile.am  adfformat.c  adfinfo.c  adfinfo_common.c  adfinfo_common.h  adfinfo_link.c  adfinfo_link.h  adfls.c  common.c  common.h  unadf.c
packaging/debian/: changelog  libadf-utils.install  libadf-utils.manpages
src/: CMakeLists.txt  adf_dev.c  adf_dev.h  adf_dev_driver_dump.c  adf_dev_driver_ramdisk.c  adf_dev_flop.c  adf_dev_hd.c  adf_dev_hdfile.c  adf_dev_type.c  adf_dir.c  adf_dir.h  adf_file.c  adf_vector.c  adf_version.h  adf_vol.c
src/linux/: adf_dev_driver_nativ.c
tests/examples2/: CMakeLists.txt  Makefile.am  Makefile.am_cmd  gen_res_msys.sh  run_all_tests.sh  test_adfinfo_links.sh  test_adfls.sh
tests/examples2/cmd/adfinfo_links/: adfinfo_hlink_file  adfinfo_slink_dir  adfinfo_slink_file  adfinfo_slink_file_same_dir
tests/examples2/cmd/adfls/: adfls_dir1_1_long  adfls_file_long  adfls_hardlink_dir  adfls_hardlink_file  adfls_main_dir  adfls_main_dir_long  adfls_softlink
tests/examples2/res/adfinfo_links/: adfinfo_hlink_file  adfinfo_hlink_file_msys  adfinfo_slink_dir  adfinfo_slink_dir_msys  adfinfo_slink_file  adfinfo_slink_file_msys  adfinfo_slink_file_same_dir  adfinfo_slink_file_same_dir_msys
tests/examples2/res/adfls/: adfls_dir1_1_long  adfls_dir1_1_long_msys  adfls_file_long  adfls_file_long_msys  adfls_hardlink_dir  adfls_hardlink_dir_msys  adfls_hardlink_file  adfls_hardlink_file_msys  adfls_main_dir  adfls_main_dir_long  adfls_main_dir_long_msys  adfls_main_dir_msys  adfls_softlink  adfls_softlink_msys
tests/unit/: CMakeLists.txt  Makefile.am  test_adf_vector.c
