dist_doc_DATA = \
	$(top_srcdir)/README.md \
	$(top_srcdir)/AUTHORS \
	$(top_srcdir)/COPYING \
	$(top_srcdir)/ChangeLog

nobase_dist_doc_DATA = \
	FAQ/image/adf_dir.gif \
	FAQ/image/adf_file.gif \
	FAQ/adf_info.html \
	FAQ/adf_info.txt \
	FAQ/adf_info_V0_9.txt \
	API/api_device.html \
	API/api_dir.html \
	API/api_env.html \
	API/api_file.html \
	API/api_index.html \
	API/api_native.html \
	API/api_salv.html \
	API/api_volume.html \
	API/API.txt \
	legacy/version0.7.9d_gary.txt

dist_man_MANS = \
	adfbitmap.1 \
	adfformat.1 \
	adfimgcreate.1 \
	adfinfo.1 \
	adfls.1 \
	adfsalvage.1 \
	unadf.1
